# map_generator

./: .gitignore  CMakeLists.txt  README.md  biome_foliage_info.cpp  gmath.h  grass_foliage_info.h  main.cpp  map_constructor.h  map_contructor.cpp  map_definitions.cpp  map_definitions.h  mapdisk_manager.cpp  mapdisk_manager.h
foliage/: foliage.h
foliage_definitions/: foliage_border_tree_setup.h  foliage_chasm_setup.h  foliage_cliffside_high_setup.h  foliage_common_setup.h  foliage_definitions.cpp  foliage_definitions.h  foliage_wall_higher_setup.h  foliage_wall_setup.h
resources/: GrassRelationsMap.txt  foliage_bordertree.yaml  foliage_chasm.yaml  foliage_cliffside_high.yaml  foliage_common.yaml  foliage_wall.yaml  foliage_wall_higher.yaml
src/: CMakeLists.txt  argparse.cpp  argparse.h  biome_foliage_info.cpp  biome_foliage_info.h  disk_manager.cpp  disk_manager.h  foliage_info.h  foliage_processor.h  gmath.h  grass_foliage_info.h  logger.h  main.cpp  map_constructor.h  mapdisk_manager.cpp  mapdisk_manager.h  matrix.h
src/foliage/: biome_info.cpp  biome_info.h  biome_info_import.h  foliage.h  foliage_info.h  grass_biome_info.h  grass_foliage_info.h  testing_biome_info.h
src/foliage_definitions/: foliage_border_tree_setup.h  foliage_chasm_setup.h  foliage_cliffside_high_setup.h  foliage_common_setup.h  foliage_definitions.cpp  foliage_definitions.h  foliage_reader.h  foliage_wall_higher_setup.h  foliage_wall_setup.h
src/map/: map_constructor.h  map_contructor.cpp  map_definitions.cpp  map_definitions.h
src/utility/: argparse.cpp  argparse.h  disk_manager.cpp  disk_manager.h  gmath.h  logger.cpp  logger.h  squashed_list.h
src/wfc/: foliage_data.h  foliage_processor.cpp  foliage_processor.h  map_processor.cpp  map_processor.h  relations.h
tests/: CMakeLists.txt  test_biome_foliage.cpp  test_biome_info.cpp  test_foliage_definitions.cpp  test_foliage_processor.cpp  test_foliage_reader.cpp  test_gmath.cpp  test_map_processor.cpp
tests/res/: foliage_tests.yaml  test_relations_map.txt  test_relations_map_02.txt
